gobmkida/g3/resegment_initial_influence
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2054:9: error: use of undeclared identifier 'marked_3'
memset( marked_3, 0, 0x190uLL); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2059:24: error: use of undeclared identifier 'marked_3'
if ( board[v1] == 3 || marked_3[v1] ) 
                       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2095:1: error: use of undeclared identifier 'marked_3'
marked_3[v1] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2118:26: error: use of undeclared identifier 'marked_3'
if ( board[v18] != 3 && !marked_3[v18] ) 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2145:1: error: use of undeclared identifier 'marked_3'
marked_3[v18] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2151:37: error: use of undeclared identifier 'marked_3'
if ( board[v15 + delta[1]] != 3 && !marked_3[v24] ) 
                                    ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2178:1: error: use of undeclared identifier 'marked_3'
marked_3[v24] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2184:37: error: use of undeclared identifier 'marked_3'
if ( board[v15 + delta[2]] != 3 && !marked_3[v30] ) 
                                    ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2211:1: error: use of undeclared identifier 'marked_3'
marked_3[v30] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2217:26: error: use of undeclared identifier 'marked_3'
if ( board[v31] != 3 && !marked_3[v31] ) 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2244:1: error: use of undeclared identifier 'marked_3'
marked_3[v31] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2264:9: error: use of undeclared identifier 'marked_3'
memset( marked_3, 0, 0x190uLL); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2267:28: error: use of undeclared identifier 'marked_3'
while ( board[v37] == 3 || marked_3[v37] || !whose_moyo_restricted( &initial_black_influence, v37) ) 
                           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2277:1: error: use of undeclared identifier 'marked_3'
marked_3[v37] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2303:26: error: use of undeclared identifier 'marked_3'
if ( board[v46] != 3 && !marked_3[v46] && v124 == whose_moyo_restricted( &initial_black_influence, v46) ) 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2305:1: error: use of undeclared identifier 'marked_3'
marked_3[v46] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2326:9: error: use of undeclared identifier 'marked_3'
memset( marked_3, 0, 0x190uLL); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2329:28: error: use of undeclared identifier 'marked_3'
while ( board[v47] == 3 || marked_3[v47] || !whose_area( &initial_black_influence, v47) ) 
                           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2339:1: error: use of undeclared identifier 'marked_3'
marked_3[v47] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2365:26: error: use of undeclared identifier 'marked_3'
if ( board[v56] != 3 && !marked_3[v56] && v125 == whose_area( &initial_black_influence, v56) ) 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2367:1: error: use of undeclared identifier 'marked_3'
marked_3[v56] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2403:9: error: use of undeclared identifier 'marked_3'
memset( marked_3, 0, 0x190uLL); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2408:25: error: use of undeclared identifier 'marked_3'
if ( board[v58] == 3 || marked_3[v58] ) 
                        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2446:1: error: use of undeclared identifier 'marked_3'
marked_3[v58] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2469:26: error: use of undeclared identifier 'marked_3'
if ( board[v75] != 3 && !marked_3[v75] ) 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2496:1: error: use of undeclared identifier 'marked_3'
marked_3[v75] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2502:37: error: use of undeclared identifier 'marked_3'
if ( board[v72 + delta[1]] != 3 && !marked_3[v81] ) 
                                    ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2529:1: error: use of undeclared identifier 'marked_3'
marked_3[v81] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2535:37: error: use of undeclared identifier 'marked_3'
if ( board[v72 + delta[2]] != 3 && !marked_3[v87] ) 
                                    ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2562:1: error: use of undeclared identifier 'marked_3'
marked_3[v87] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2568:26: error: use of undeclared identifier 'marked_3'
if ( board[v88] != 3 && !marked_3[v88] ) 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2595:1: error: use of undeclared identifier 'marked_3'
marked_3[v88] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2617:9: error: use of undeclared identifier 'marked_3'
memset( marked_3, 0, 0x190uLL); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2620:28: error: use of undeclared identifier 'marked_3'
while ( board[v94] == 3 || marked_3[v94] || !whose_moyo_restricted( &initial_white_influence, v94) ) 
                           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2630:1: error: use of undeclared identifier 'marked_3'
marked_3[v94] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2656:27: error: use of undeclared identifier 'marked_3'
if ( board[v103] != 3 && !marked_3[v103] && v126 == whose_moyo_restricted( &initial_white_influence, v103) ) 
                          ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2658:1: error: use of undeclared identifier 'marked_3'
marked_3[v103] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2679:9: error: use of undeclared identifier 'marked_3'
memset( marked_3, 0, 0x190uLL); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2682:29: error: use of undeclared identifier 'marked_3'
while ( board[v104] == 3 || marked_3[v104] || !whose_area( &initial_white_influence, v104) ) 
                            ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2692:1: error: use of undeclared identifier 'marked_3'
marked_3[v104] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2718:27: error: use of undeclared identifier 'marked_3'
if ( board[v113] != 3 && !marked_3[v113] && v127 == whose_area( &initial_white_influence, v113) ) 
                          ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/engine/influence.c:2720:1: error: use of undeclared identifier 'marked_3'
marked_3[v113] = 1; 
^
42 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/resegment_initial_influence/src/obj/1/influence.o] Error 1
